--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install .
+        pip install -e .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -42,4 +42,5 @@ jobs:
     - name: Bulld sphinx docs
       uses: ammaraskar/sphinx-action@0.4
       with:
+        pre-build-command: "pip install -e ."
         docs-folder: "docs/"
