--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,9 @@ jobs:
          pre-build-command: pip install -e .
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
-        name: html-docs
-        path: docs/build/html/
+      with:
+         name: html-docs
+         path: docs/build/html/
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
