--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ recursive-include pysp2 *.xls
 recursive-include pysp2 *.dat
 recursive-include pysp2 *.sp2b
 recursive-include pysp2 *.ini *.hk
+recursive-include tests *.py
