--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ recursive-include pysp2 *.xls
 recursive-include pysp2 *.dat
 recursive-include pysp2 *.sp2b
 recursive-include pysp2 *.ini *.hk
+include *.txt
+
