--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,14 +11,24 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    name: ${{ matrix.os }}-${{ matrix.python-version }}
+    if: github.repository == 'ARM-DOE/ACT'
+    runs-on: ${{ matrix.os }}-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
+        os: [macOS, ubuntu, Windows]
+        inlcude:
+          - os: macos-latest
+            PLAT: arm64
+            INTERFACE64: ""
+            platform: [x64]
 
-    steps:
+   steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -36,4 +46,6 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-  
+    - name: Run tests
+      run: |
+        pytest   
