--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,16 +25,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+
+      - name: Setup Conda Environment
+        uses: conda-incubator/setup-miniconda@v2
         with:
             python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-            python -m pip install --upgrade pip
-            python -m pip install flake8 pytest
-            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-            pip install -e .
+            environment-file: ./continuous_integration/environment_actions.yml
+            activate-environment: sp2_env
+            auto-activate-base: False
+            mamba-version: '*'
+            use-mamba: true
+            miniforge-variant: Mambaforge
+
       - name: Lint with flake8
         run: |
             # stop the build if there are Python syntax errors or undefined names
