--- a/docs/environment_docs.yml
+++ b/docs/environment_docs.yml
@@ -10,5 +10,7 @@ dependencies:
       - sphinx_gallery
       - sphinx-copybutton
       - pydata-sphinx-theme<0.9.0
+      - sphinxcontrib-applehelp<1.0.8
+      - sphinxcontrib-devhelp<1.0.6
       - sphinx_design
       - nbsphinx
