--- a/docs/environment_docs.yml
+++ b/docs/environment_docs.yml
@@ -9,7 +9,7 @@ dependencies:
       - sphinx
       - sphinx_gallery
       - sphinx-copybutton
-      - pydata-sphinx-theme<0.9.0
+      - pydata-sphinx-theme
       - sphinxcontrib-applehelp<1.0.8
       - sphinxcontrib-devhelp<1.0.6
       - sphinx_design
