--- a/docs/environment_docs.yml
+++ b/docs/environment_docs.yml
@@ -5,11 +5,11 @@ channels:
 dependencies:
   - act-atmos
   - xarray
+  - sphinx
+  - pydata-sphinx-theme
   - pip:
-      - sphinx
       - sphinx_gallery
       - sphinx-copybutton
-      - pydata-sphinx-theme<0.9.0
       - sphinx_design
       - nbsphinx
       - sphinxcontrib-applehelp<1.0.8
